--- a/06.Rmd
+++ b/06.Rmd
@@ -170,3 +170,21 @@ knitr::include_graphics('media-06/image6.png')
 
 ### Basic kinetic model
 
+CYP450 효소 유도를 평가하는 방법 중 비교적 최신에 가장 정형화된 방법으로 Correlation methods와 마찬가지로 induction 실험을 통해 구한
+EC50와 Emax를 사용하여 R3를 계산하여 기존에 설정한 수준 (0.8 이하) 보다 낮은 경우에는 in vivo에서 후보 물질이 유도 가능성이 있다고 판단하는 방법이다. 
+R3는 다소 복잡한 식으로 아래와 같이 계산한다.
+
+\begin{equation}
+\R{3} = frac{1}{1 + d \cdot \frac{E{max} \cdot I{max,u} \cdot 10}{EC{50} + 10 \cdot I{max,u}}} 
+(\#eq:eq06-4) 
+\end{equation}
+
+여기서 d값은 scaling factor로 일반적으로는 1로 설정하나 실험 환경에 따라서 기존 결과를 반영한 값을 설정할 수 있다. 또한 R3의 cut-off 수준은 기존의 동일한 실험 조건에서의 다른 유도체 및 양성 대조군의 결과를 통해 설정할 수 있다.
+
+## In vitro-in vivo extrapolation (IVIVE)
+
+Induction 실험에서의 결과를 통해 in vivo에서의 결과를 정량적으로 예측할 수 있다.
+
+## 후보 약물에서의 유도 가능성 평가를 위한 animal model
+
+일반적으로 
