--- a/05.Rmd
+++ b/05.Rmd
@@ -4,22 +4,22 @@
 
 ## 서론
 
-이 장에서는 개발하는 약물이 과연 대사 억제제(inhibitor) 역할을 하는
-약물인지 확인하고, 어떤 대사억제(inhibition) 특성을 가지는지 확인하는
-방법을 살펴보기로 한다. Inhibition의 종류는 크게 두가지로 구분되며, 이는
-reversible inhibition 과 time-dependent inhibition으로 나뉜다. 각각의
-inhibition 종류에 따른 inhibition assay 및 실험 방법들과 이를 통해
-얻어지는 핵심 정보들(i.e. inhibition type, inhibition parameters)이
-무엇인지 알아보자. 그리고, 그 결과를 해석하는 방법 및 활용(i.e. DDI
+이 장에서는 개발하는 약물이 과연 대사를 억제(metabolic inhibition)하는
+약물인지 확인하고, 억제제(inhibitor)라면 어떤 대사 억제 특성을 가지는지 확인하는
+방법에 대하여 살펴본다. 대사 억제의 종류는 크게 두가지로 구분되며, 이는
+(가역적 억제)reversible inhibition와 시간 의존적 억제(time-dependent inhibition, TDI)로 나뉜다. 각각의
+대사 억제 종류에 따른 inhibition assay와 실험 방법들 그리고 이를 통해
+얻어지는 핵심 정보들(i.e. inhibition type, inhibition parameters)가
+무엇인지 알아보기로 한다. 그리고, 그 결과를 해석하는 방법과 활용(i.e. DDI
 prediction)에 대해 살펴보겠다.
 
-## 신약 개발 주기 안에서의 in vitro inhibition assay의 중요성/활용/위치
+## 신약 개발 주기 안에서의 in vitro inhibition assay의 중요성 및 활용
 
-DDI 평가는 중요하며, 특히 여러 종류의 약물을 장기간 병용 투약하는
-만성질환을 가진 환자에서 눈여겨 보아야 한다. Inhibitor 역할을 하는
+약물 간 상호작용(Drug-Drug Interaction,DDI) 평가는 중요하며, 특히 여러 종류의 약물(polypharmacy)을 장기간 병용 투약하는
+만성질환을 가진 환자에서 눈여겨 보아야 한다. 억제제 역할을 하는
 약물은 victim drug 와 병용투여시 victim drug의 체내 약물 농도를 높게
 만들고, 이에 따른 이상반응이나 독성이 나타날 수 있다. 따라서 후보물질의
-대사 억제 특성 평가는 환자의 안전한 약물 치료를 위해 반드시 선행적으로
+대사 억제 특성 평가는 환자의 안전한 약물 치료를 위해 반드시 먼저
 수행되어야 하는 부분이다.
 
 ```{r 05-01, fig.cap = "(ref:05-01)"}
@@ -31,22 +31,17 @@ knitr::include_graphics('media-05/image-1-2.png')
 Victim (substrate): Drug whose PK is affected,  
 Perpetrator: Drug that is affecting PK of victim
 
-Inhibition 은 크게 두 종류로 나뉘어 지며, 이는 reversible inhibition 과
-time-dependent inhibition이다. Reversible inhibition 은 또 한 번
-competitive, noncompetitive, 그리고 uncompetitive 로 세분화할 수 있다.
-각 종류 별 어떠한 inhibitor 로써 약물이 역할을 하는지 그리고 얼마나 그
-역할을 하는지에 대하여 다양한 확인 법 및 assay를 통해 확인할 수 있고,
-우리는 inhibition 과 관련된 parameter값을 수치화 하여 얻을 수 있다. 이는
-DDI prediction을 위해 사용되며, DDI prediction 시 다양한 방법(static
-model, mechanistic static model, 그리고/또는 PBPK model)을 통해
-inhibition parameter 값들을 적용하고 궁극적으로 DDI prediction에
-사용한다.
+대사 억제는 크게 두 종류로 나뉘어진다. 가역적 억제는 competitive, noncompetitive 그리고
+uncompetitive로 세분화할 수 있다.
+각 종류 별 어떤 억제제로서 작용하는지를 여러가지 실험으로 확인할 수 있다. DDI 예측시 다양한 방법(static model, 
+mechanistic static model, 그리고/또는 PBPK model)을 통해 실험에서 얻어진 억제와 관련 파라미터 값들을 적용하고
+궁극적으로 DDI를 예측하는데 사용한다.
 
-In vitro 정보를 기반으로 한 DDI 평가는 In vitro ADME study 내에서
-metabolism study에 해당하는 부분으로, metabolism study 범주 내에는 DDI
+In vitro 정보를 기반으로 한 DDI 평가는 In vitro ADME 연구내에서
+대사 연구(Metabolism study)에 해당하는 부분으로, 대사 연구 범주 내에는 DDI
 평가 외에도 metabolic stability test, metabolite profiling, 그리고 CYP
-isozyme profiling 등이 있다. 이와 같은 metabolic DDI 평가에는Cytochrome
-P450 inhibition 평가, induction 평가 및 activation/suppression 평가가
+isozyme profiling 등이 있다. 이와 같은 metabolic DDI 평가에는 Cytochrome
+P450 억제평가, 유도평가 및 activation/suppression 평가가
 포함된다.
 
 신약개발 주기에서 in vitro DDI 평가, 특히 inhibition 평가는 언제 이루어
