--- a/01.Rmd
+++ b/01.Rmd
@@ -133,20 +133,11 @@ knitr::include_graphics('media-01/image2.png')
 
 Table: (\#tab:table01-03) 인공 위액 및 인공 장액의 비교
 
-+--------+------------------------------+------------------------------+
-| 종류   | 인공 위액                    | 인공 장액                    |
-|        | (SGF, Simulated Gastric     | (SIF, Simulated Gastric     |
-|        | Fluid)                       | Fluid)                       |
-+========+==============================+==============================+
-| 정의   | USP에 의해 정의된            | USP에 의해 정의된            |
-|        |                              |                              |
-|        | 절식 상태의 인공 위액        | 절식 상태의 인공 장액        |
-+--------+------------------------------+------------------------------+
+| 종류   | 인공 위액 (SGF, Simulated Gastric Fluid)  | 인공 장액 (SIF, Simulated Intestinal Fluid)  |
+| :--- | :--- |
+| 정의   | USP에 의해 정의된    절식 상태의 인공 위액         | USP에 의해 정의된  절식 상태의 인공 장액   | 
 | pH     | 1.2                          | 6.7                          |
-+--------+------------------------------+------------------------------+
-| 구성   | Pepsin, HCl, NaCl, water     | Pancreatin, KH~2~PO~4~,      |
-| 성분   |                              | NaOH, water                  |
-+--------+------------------------------+------------------------------+
+| 구성 성분  | Pepsin, HCl, NaCl, water     | Pancreatin, KH~2~PO~4~, NaOH, water |
 
 ### Bio-relevant media
 
