--- a/bib/pharmapk.bib
+++ b/bib/pharmapk.bib
@@ -49,6 +49,23 @@
 }
 
 
+# 05.Rma ----
+
+@book{li2008drug,
+  title={Drug-drug interactions in pharmaceutical development},
+  author={Li, Albert P},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@misc{invitroadme,
+  title = {In vitro ADME and PK},
+  author = {Cyprotex}, 
+  year = {2023}, 
+  howpublished = {\url{https://cyprotex.com/admepk}},
+  note = {Accessed: 2023-09-13}
+}
+
 # 07.Rmd ----
 
 @article{wang2008oct2,
